# cyberpunk_arcade_shooter

./: Cargo.toml  README.md  Trunk.toml  WASM_BUILD.md  index.html  mobile-wasm.md
.cargo/: config.toml
.github/workflows/: ci.yml
.superpowers/brainstorm/33409-1773931831/: .server-stopped  hud-full.html  phase-transition.html  round-announce.html  ui-style.html
.superpowers/brainstorm/55239-1773842864/: .server-stopped  screen-effects.html
.superpowers/brainstorm/61801-1773845561/: .server-stopped  background-style.html  screen-effects.html
assets/shaders/: crt_post_process.wgsl
docs/superpowers/plans/: 2026-03-18-enterprise-juice.md  2026-03-19-boss-stages-and-ui-overhaul.md  2026-03-19-powerups.md  2026-04-09-boss-phases-laser-tests.md  2026-04-10-wasm-mobile-optimization.md  2026-04-10-wasm-port-bevy-audio.md  2026-04-21-more-powerups-phase1.md
docs/superpowers/specs/: 2026-03-18-enterprise-juice-design.md  2026-03-19-boss-stages-and-ui-overhaul-design.md  2026-03-19-powerups-design.md  2026-04-09-boss-phases-laser-tests-design.md  2026-04-10-wasm-mobile-optimization-design.md  (+1 more)
src/: app.rs  env.rs  lib.rs  main.rs
src/blockchain/: mod.rs
src/core/: README.md  mod.rs
src/core/boss/: attacks.rs  (+3 more)
src/data/: game_state.rs  mod.rs
src/systems/: audio.rs  background.rs  collision.rs  combat.rs  game_over.rs  mod.rs  particles.rs  post_processing.rs  powerups.rs  round.rs
src/ui/: announcement.rs  hud.rs  menus.rs  mod.rs
src/utils/: config.rs  mod.rs  time_compat.rs
tests/: boss_integration.rs  laser_integration.rs  round_transition_repro.rs
tests/helpers/: mod.rs
(+22 files in other folders)
