[package]
name = "cyberpunk_rpg"
version = "0.1.0"
edition = "2024"

[features]
default = []
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = "0.16.1"
rand = "0.8"
rodio = { version = "0.20", default-features = false, features = ["wav"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
