[package]
name = "cyberpunk_rpg"
version = "0.1.0"
edition = "2024"

[features]
default = []
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "hdr",
    "tonemapping_luts",
    "std",
    "webgl2",
] }
rand = "0.8"
rodio = { version = "0.20", default-features = false, features = ["wav"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.16.1"
features = ["multi_threaded", "x11"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
